[package]
name = "signtool"
version = "1.1.0"
edition = "2021"
description = "Simplify using SignTool to sign Windows executables"
authors = ["Samuel Garcés Marín <samuel.garces@protonmail.com>"]
repository = "https://github.com/SecSamDev/signtool-rs"
license = "MIT"

[dependencies]
forensic-rs = "0.9"
frnsc-liveregistry-rs = "0.9"
thiserror = "1.0.40"
